--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
 
+    <h1 id="prezzo"></h1>
 
-    
+
    <script type="text/javascript" src="./js/main.js"></script> 
 </body>
 </html>
